--- a/postlaunch/index.html
+++ b/postlaunch/index.html
@@ -130,7 +130,7 @@
 								<div class="slide">
 									<div class="slideinnr">
 										<!-- <img src="images/Open-Red-Book-new.png" alt=""> -->
-										<div id="redbook1"></div>
+										<div id="redbook1" class="bookpdfloading"></div>
 										<div class="btnbox">
 											<a href="javascript:void(0)" onclick="showPopup()" class="posurl irabookvideo">												
 											</a>
@@ -154,7 +154,7 @@
 								<div class="slide">
 									<div class="slideinnr">
 										<!-- <img src="images/Open-Green-Book-1-new.png" alt=""> -->
-										<div id="bluebook1"></div>
+										<div id="bluebook1" class="bookpdfloading"></div>
 										<div class="btnbox">
 											<a href="javascript:;" onclick="showmathariPopup()" class="posurl">
 											</a>
@@ -163,7 +163,7 @@
 								</div>
 								<div class="slide">
 									<div class="slideinnr">
-										<div id="bluebook2"></div>
+										<div id="bluebook2" class="bookpdfloading"></div>
 										<!-- <img src="images/Open-Blue-Book-new.png" alt=""> -->
 										<div class="btnbox">
 											<a href="javascript:;" onclick="showpiePopup()" class="posurl">
@@ -188,7 +188,7 @@
 								<div class="slide">
 									<div class="slideinnr">
 										<!-- <img src="images/Open-Green-Book-new.png" alt=""> -->
-										<div id="greenbook1"></div>
+										<div id="greenbook1" class="bookpdfloading"></div>
 										<div class="btnbox">
 											<a href="javascript:;" onclick="showairPopup()" class="posurl">
 											</a>
@@ -198,7 +198,7 @@
 								<div class="slide">
 									<div class="slideinnr">
 										<!-- <img src="images/Open-green-Book--1new.png" alt=""> -->
-										<div id="greenbook2"></div>
+										<div id="greenbook2" class="bookpdfloading"></div>
 										<div class="btnbox">
 											<a href="javascript:;" onclick="scipiePopup()" class="posurl">
 											</a>
