--- a/postlaunch/index.html
+++ b/postlaunch/index.html
@@ -554,7 +554,7 @@
     var animations = lottie.loadAnimation({
         container: document.getElementById('bluebook2'),
         renderer: 'svg',
-        loop: true,
+        loop: false,
         autoplay: true,
         path: 'images/BLUE_Book_Fold_02_PIE_min.json' // Update this path
     });
@@ -564,7 +564,7 @@ animations.setSpeed(0.5); // Set to 0.5 for half speed, adjust as needed
 	var animationss = lottie.loadAnimation({
         container: document.getElementById('redbook1'),
         renderer: 'svg',
-        loop: true,
+        loop: false,
         autoplay: true,
         path: 'images/RED_Book_Open_min.json' // Update this path
     });
@@ -580,7 +580,7 @@ animations.setSpeed(0.5); // Set to 0.5 for half speed, adjust as needed
 	var animationsss = lottie.loadAnimation({
         container: document.getElementById('greenbook2'),
         renderer: 'svg',
-        loop: true,
+        loop: false,
         autoplay: true,
         path: 'images/GREEN_Book_Fold02_PIE_min.json' // Update this path
     });
