--- a/postlaunch/optimize/index.html
+++ b/postlaunch/optimize/index.html
@@ -44,7 +44,7 @@
          </div>
       </header>
       <!-- Main Banner Start -->
-      <section class="mainbanner bgstyle" id="mainbanner" style="background-image: url(images/background.png);">
+      <section class="mainbanner bgstyle" id="mainbanner" style="background-image: url(images/background.jpg);">
          <div class="container">
             <div class="blockbookjourney">
                <div class="bookthreeblock">
@@ -245,7 +245,7 @@
       </div>
       <!-- Powered by End -->
       <!-- Product Section Start -->
-      <section class="productsection bgstyle" id="productsection" style="background-image: url(images/background.png);">
+      <section class="productsection bgstyle" id="productsection" style="background-image: url(images/background.jpg);">
          <div class="containBox">
             <div class="productblock">
                <div class="productslider">
@@ -321,7 +321,7 @@
       </section>
       <!-- Product Section End -->
       <!-- Curious to learn more? Start -->
-      <section class="curiouslearnsec bgstyle" id="curiouslearnsec" style="background-image: url(images/background.png);">
+      <section class="curiouslearnsec bgstyle" id="curiouslearnsec" style="background-image: url(images/background.jpg);">
          <div class="container">
             <div class="row">
                <div class="col-5">
@@ -368,7 +368,7 @@
       </section>
       <!-- Demo Request Form End -->
       <!-- Faq Section Start -->
-      <section class="faqsection bgstyle" id="faqsection" style="background-image: url(images/background.png);">
+      <section class="faqsection bgstyle" id="faqsection" style="background-image: url(images/background.jpg);">
          <div class="container">
             <div class="row">
                <div class="col-6">
