--- a/postlaunch/optimize/prebook.html
+++ b/postlaunch/optimize/prebook.html
@@ -45,7 +45,7 @@
 
 
 	<!-- Curious to learn more? Start -->
-	 <section class="curiouslearnsec bgstyle" id="curiouslearnsec" style="background-image: url(images/background.png);">
+	 <section class="curiouslearnsec bgstyle" id="curiouslearnsec" style="background-image: url(images/background.jpg);">
 		<div class="container">
 			<div class="row">
 				<div class="col-5">
