--- a/postlaunch/optimize/success.html
+++ b/postlaunch/optimize/success.html
@@ -42,7 +42,7 @@
 		</div>
 	</header>
 	<!-- Curious to learn more? Start -->
-	 <section class="curiouslearnsec bgstyle" id="curiouslearnsec" style="background-image: url(images/background.png);">
+	 <section class="curiouslearnsec bgstyle" id="curiouslearnsec" style="background-image: url(images/background.jpg);">
 		<div class="container">
 			<div class="row">
 				<div class="col-5">
